--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -14,14 +14,12 @@
     <div class="container">
         <div class="row-6" th:each="item : ${articles}"><!-- article 개수만큼 반복 -->
             <div class="card">
-<!--                <div calss="card-header" th:text="${item.id}">  &lt;!&ndash; item의 id 출력 &ndash;&gt;-->
-                <div calss="card-header">
-                    왜안돼
+                <div calss="card-header" th:text="${item.id}">  <!-- item의 id 출력 -->
                 </div>
                 <div class="card-body">
                     <h5 class="card-title" th:text="${item.title}"></h5>
                     <p class="card-text" th:text="${item.content}"></p>
-                    <a href="#" class="btn btn-primary">보러 가기</a>
+                    <a th:href="@{/articles/{id}(id=${item.id})}" class="btn btn-primary">보러 가기</a>
                 </div>
             </div>
         </div>
